--- a/BT1/index.html
+++ b/BT1/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hello HTML!</h1>
+    <p>I am learning HTML and CSS</p>
 </body>
 </html>
