--- a/BT1/index.html
+++ b/BT1/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Hello HTML!</h1>
+    <h2>Nguyen Tien Dat</h2>
+    <h3>23070605</h3>
     <p>I am learning HTML and CSS</p>
+    <br>
+    <hr>
 </body>
 </html>
