--- a/BT1/index.html
+++ b/BT1/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello HTML!</h1>
     <h2>Nguyen Tien Dat</h2>
-    <h3>23070605</h3>
+    <h3>23070605 MIS2023A</h3>
     <p>I am learning HTML and CSS</p>
     <hr>
 </body>
