--- a/BT1/index.html
+++ b/BT1/index.html
@@ -9,7 +9,9 @@
     <h1>Hello HTML!</h1>
     <h2>Nguyen Tien Dat</h2>
     <h3>23070605 MIS2023A</h3>
-    <p>I am learning HTML and CSS</p>
+    <h3>GPA 3.03 75/130</h3>
+    <p>Loves sleeping</p>
+    <p>Learning HTML and CSS</p>
     <hr>
 </body>
 </html>
