--- a/BT1/index.html
+++ b/BT1/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello HTML!</h1>
+    <h1>Personal Info</h1>
     <h2>Nguyen Tien Dat</h2>
     <h3>23070605 MIS2023A</h3>
     <h3>GPA 3.03 75/130</h3>
