--- a/WK3/index.html
+++ b/WK3/index.html
@@ -7,20 +7,7 @@
 </head>
 <body>
     <h1>Fruits</h1>
-    <img src="images/banana.png" alt="banana">
-    <img src="images/orange.png" alt="apple">
-    <img src="images/kiwi.png" alt="kiwi">
-    <img src="images/kiwi.png" alt="kiwi">
-    <img src="images/apple.png" alt="apple">
-    <img src="images/apple.png" alt="apple">
-    <img src="images/apple.png" alt="apple">
-    <img src="images/banana.png" alt="banana">
-    <img src="images/kiwi.png" alt="kiwi">
-    <img src="images/orange.png" alt="orange">
-    <img src="images/orange.png" alt="orange">
-    <img src="images/banana.png" alt="banana">
-    <img src="images/orange.png" alt="orange">
-    <img src="images/orange.png" alt="orange">
-    <img src="images/apple.png" alt="apple">
+    <img src="images/banana.png" alt="banana", img src="images/orange.png" alt="apple", img src="images/kiwi.png" alt="kiwi", img src="images/kiwi.png" alt="kiwi", img src="images/apple.png" alt="apple">
+
 </body>
 </html>
