--- a/WK3/index.html
+++ b/WK3/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Fruits</h1>
-    <img src="images/banana.png" alt="banana", img src="images/orange.png" alt="apple", img src="images/kiwi.png" alt="kiwi", img src="images/kiwi.png" alt="kiwi", img src="images/apple.png" alt="apple">
+    <img src="images/banana.png" alt="banana";
+    img src="images/orange.png" alt="apple";
+    img src="images/kiwi.png" alt="kiwi";
+    img src="images/kiwi.png" alt="kiwi";
+    img src="images/apple.png" alt="apple">
 
 </body>
 </html>
