--- a/WK3/index.html
+++ b/WK3/index.html
@@ -11,7 +11,7 @@
     img src="images/orange.png" alt="apple";
     img src="images/kiwi.png" alt="kiwi";
     img src="images/kiwi.png" alt="kiwi";
-    img src="images/apple.png" alt="apple">
+    img src="images/apple.png" alt="apple";>
 
 </body>
 </html>
