--- a/BT1/index.html
+++ b/BT1/index.html
@@ -8,10 +8,13 @@
 <body>
     <h1>Personal Info</h1>
     <h2>Nguyen Tien Dat</h2>
-    <h3>23070605 MIS2023A</h3>
-    <h3>GPA 3.03 75/130</h3>
-    <p>Loves sleeping</p>
-    <p>Learning HTML and CSS</p>
+    <ol type="A">
+        <li>Uni Progress</li>
+        <ul type="circle">
+            <li>23070605 MIS2023A</li>
+            <li>GPA 3.03 75/130</li>
+        </ul>
+    </ol>
     <hr>
 </body>
 </html>
