--- a/BT1/index.html
+++ b/BT1/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Personal Info</h1>
     <h2>Nguyen Tien Dat</h2>
-    <ol type="A">
+    <ol type="I">
         <li>Uni Progress</li>
         <ul type="circle">
             <li>23070605 MIS2023A</li>
