--- a/BT1/index.html
+++ b/BT1/index.html
@@ -10,10 +10,17 @@
     <h2>Nguyen Tien Dat</h2>
     <ol type="I">
         <li>Uni Progress</li>
-        <ul type="circle">
-            <li>23070605 MIS2023A</li>
-            <li>GPA 3.03 75/130</li>
-        </ul>
+            <ul type="circle">
+                <li>23070605 MIS2023A</li>
+                <li>GPA 3.03 75/130</li>
+            </ul>
+        <li>Hobbies
+            <ul type="square">
+                <li>Football</li>
+                <li>Badminton</li>
+                <li>Playing games</li>
+            </ul>
+        </li>
     </ol>
     <hr>
 </body>
