--- a/BT1/index.html
+++ b/BT1/index.html
@@ -15,7 +15,7 @@
                 <li>GPA 3.03 75/130</li>
             </ul>
         <li>Hobbies
-            <ul type="square">
+            <ul type="circle">
                 <li>Football</li>
                 <li>Badminton</li>
                 <li>Playing games</li>
