--- a/WK4/index.html
+++ b/WK4/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><b></b>Bear</b></h1>
+    <h1><b></b>The Brown Bear</b></h1>
     <img src="bear.jpg" alt="a bear">
     <ol type="1">
-        <li>The Brown Bear</li>
-        <ul>The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently "Least Concern." There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.</ul>
+        <p>The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently "Least Concern." There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.</p>
+        <li></li>
     </ol>
 </body>
 </html>
