--- a/WK4/index.html
+++ b/WK4/index.html
@@ -12,12 +12,12 @@
     <a href="google.com">Learn More</a>
     <li>
         Here are some bear species
-        <ul type="circle">
+        <ul type="circle"><b>
             <li>Arctos</li>
             <li>Collarus</li>
             <li>Horribilis</li>
             <li>Nelsoni (extinct)</li>
-        </ul>
+        </b></ul>
     </li>
 </body>
 </html>
