--- a/WK4/index.html
+++ b/WK4/index.html
@@ -12,12 +12,18 @@
     <a href="google.com">Learn More</a>
     <li>
         Here are some bear species
-        <ul type="circle"><b>
+        <ul type="circle">
             <li>Arctos</li>
             <li>Collarus</li>
             <li>Horribilis</li>
             <li>Nelsoni (extinct)</li>
-        </b></ul>
+        </ul>
+        The following countries have the largest populations of brown bears:
+        <ol type="1">
+            <li>Russia</li>
+            <li>United States</li>
+            <li>Canada</li>
+        </ol>
     </li>
 </body>
 </html>
