--- a/WK4/index.html
+++ b/WK4/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1><b></b>The Brown Bear</b></h1>
-
-    <p>The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently "Least Concern." There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.</p>
-    <a href="google.com">Learn More</a>
     <li>
+        <p>The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently "Least Concern." There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.</p>
+        <a href="https://en.wikipedia.org/wiki/Brown_bear">Learn More</a>
+    
         Here are some bear species
         <ul type="circle">
             <li>Arctos</li>
