--- a/WK4/index.html
+++ b/WK4/index.html
@@ -12,7 +12,7 @@
         <a href="https://en.wikipedia.org/wiki/Brown_bear">Learn More</a>
     
         Here are some bear species
-        <ul type="circle">
+        <ul type="disc">
             <li>Arctos</li>
             <li>Collarus</li>
             <li>Horribilis</li>
