--- a/WK4/index.html
+++ b/WK4/index.html
@@ -10,15 +10,14 @@
     <li>
         <p>The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently "Least Concern." There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.</p>
         <a href="https://en.wikipedia.org/wiki/Brown_bear">Learn More</a>
-    
-        Here are some bear species
+        <li>Here are some bear species</li>
         <ul type="disc">
             <li>Arctos</li>
             <li>Collarus</li>
             <li>Horribilis</li>
             <li>Nelsoni (extinct)</li>
         </ul>
-        The following countries have the largest populations of brown bears:
+        <li>The following countries have the largest populations of brown bears:</li>
         <ol type="1">
             <li>Russia</li>
             <li>United States</li>
