--- a/BT1/index.html
+++ b/BT1/index.html
@@ -10,16 +10,20 @@
     <h2>Nguyen Tien Dat</h2>
     <ol type="I">
         <li>Uni Progress</li>
+        <details>
             <ul type="circle">
                 <li>23070605 MIS2023A</li>
                 <li>GPA 3.03 75/130</li>
             </ul>
+        </details>
         <li>Hobbies
+        <details>
             <ul type="circle">
                 <li>Football</li>
                 <li>Badminton</li>
                 <li>Playing games</li>
             </ul>
+        </details>
         </li>
     </ol>
     <hr>
