--- a/BT1/index.html
+++ b/BT1/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Personal Info</h1>
     <h2>Nguyen Tien Dat</h2>
+    <video src="https://test-videos.co.uk/vids/bigbuckbunny/mp4/av1/360/Big_Buck_Bunny_360_10s_1MB.mp4"></video>
     <ol type="I">
         <li>Uni Progress</li>
         <details>
