--- a/WK5/index.html
+++ b/WK5/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>CSS test</h1>
-    <p style="color: brown; font-size: larger; font-style: italic;">look at ts</p>
+    <p style="color: brown; font-size: larger; font-style: italic; text-decoration: underline;">look at ts</p>
 </body>
 </html>
