--- a/WK5/index.html
+++ b/WK5/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        p {
+            color: blue;
+            text-decoration: line-through;
+        }
+
+        .und {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <h1>CSS test</h1>
-    <p style="color: brown; font-size: larger; font-style: italic; text-decoration: underline;">look at ts</p>
+    <p class="und">This is a p tag</p>
+    <p>This is another p tag</p>
 </body>
 </html>
