--- a/WK5/index.html
+++ b/WK5/index.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        p {
-            color: blue;
-            text-decoration: line-through;
-        }
-
-        .und {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>CSS test</h1>
