--- a/WK5/ex_navi_bar/index.html
+++ b/WK5/ex_navi_bar/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Tutorials</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="/BT1/index.html">About</a></li>
             <li><a href="#">Newsletter</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
