--- a/WK5/ex_navi_bar/index.html
+++ b/WK5/ex_navi_bar/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav id="topmenu">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/WK5/ex_navi_bar/index.html">Home</a></li>
             <li><a href="#">Tutorials</a></li>
             <li><a href="/BT1/index.html">About</a></li>
             <li><a href="#">Newsletter</a></li>
