--- a/BT1/index.html
+++ b/BT1/index.html
@@ -9,8 +9,8 @@
 <body>
     <nav id="topmenu">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Tutorials</a></li>
+            <li><a href="/WK5/ex_navi_bar/index.html">Home</a></li>
+            <li><a href="https://youtu.be/dQw4w9WgXcQ?si=qe59EM_7Ocg2kZL_">Tutorials</a></li>
             <li><a href="/BT1/index.html">About</a></li>
             <li><a href="#">Newsletter</a></li>
             <li><a href="#">Contact</a></li>
