--- a/Final Exam/ex1.html
+++ b/Final Exam/ex1.html
@@ -30,7 +30,8 @@
             <h3>Laptop &reg;</h3>
             <p>High performance machine.</p>
             <p class="price-tag">Price: &euro;999</p> 
-            <button>Buy &rarr;</button> </div>
+            <button>Buy &rarr;</button> 
+        </div>
         <div class="card">
             <h3>Phone &reg;</h3>
             <p>Smart and fast.</p>
