--- a/Final Exam/ex2.html
+++ b/Final Exam/ex2.html
@@ -82,7 +82,7 @@
 
     <script>
         function switchTab(tabId, btnElement) {
-            //Get all content divs and hide them
+            //Get all content in divs and hide them
             let allContent = document.getElementsByClassName("content");
             for (let i = 0; i < allContent.length; i++) {
                 allContent[i].classList.remove("show");
