--- a/Final Exam/ex3.html
+++ b/Final Exam/ex3.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form</title>
 <head>
     <style>
         body { display: flex; justify-content: center; align-items: center; height: 100vh; font-family: sans-serif; }
@@ -57,7 +61,7 @@
 
             // 1. Check if passwords match
             if (pass !== confirmPass) {
-                matchError.style.display = "block"; // Show error text
+                matchError.style.display = "block"; 
                 alert("Passwords do not match!");
                 return false;
             }
