--- a/Final Exam/ex3.html
+++ b/Final Exam/ex3.html
@@ -52,14 +52,12 @@
         function validateForm() {
             let user = document.getElementById("username").value;
             let pass = document.getElementById("password").value;
-            let confirmPass = document.getElementById("confirmPass").value; // Get confirm value
+            let confirmPass = document.getElementById("confirmPass").value; 
             let file = document.getElementById("profilePic").value;
             let matchError = document.getElementById("matchError");
 
-            //Reset error message
             matchError.style.display = "none";
 
-            //Check if passwords match
             if (pass !== confirmPass) {
                 matchError.style.display = "block"; 
                 alert("Passwords do not match!");
